--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,14 @@ p:nth-child(2) {
 	margin-bottom: 3vw;
 	border: 1px solid;
 
-	width: 80vw;
+	width: 100%;
 	height: 40vh;
 }
+
+input#submit {
+display: none;
+}
+
 
 
 /** om os **/
