--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,11 @@ form {
     font-size: 1.2em;
     text-decoration: none;
     margin-bottom: 30px;
+    transition: 0.3s all ease;
+}
+
+.menukort:hover {
+    opacity: 0.8;
 }
 
 
