--- a/css/style.css
+++ b/css/style.css
@@ -133,8 +133,8 @@ h4 {
 /* Footer */
 
 footer {
-    background-color: #334151;
-    color: #fbfaf3;
+    border: 4px solid #8fc9bc;
+    color: #334151;
     width: calc(100% - 100px);
     margin: 25px;
     padding: 25px;
@@ -165,14 +165,16 @@ textarea {
     width: 100%;
     border: none;
     margin-top: 10px;
+    font-size: 1em;
 }
 
 input {
     width: 100%;
-    height: 20px;
+    height: 30px;
     margin-bottom: 15px;
     margin-top: 10px;
     border: none;
+    font-size: 1em;
 }
 
 input:last-child {
@@ -189,6 +191,7 @@ form {
     float: left;
     height: 50px;
     line-height: 50px;
+    margin-top: 20px;
     text-align: center;
     width: 100%;
     background: #334151;
@@ -201,6 +204,30 @@ form {
 
 .menukort:hover {
     opacity: 0.8;
+}
+
+.submit {
+    background-color: #334151;
+    color: white;
+    cursor: pointer;
+    height: 45px;
+    font-size: 1.2em;
+}
+
+.submit:hover {
+    cursor: pointer;
+}
+
+.circle {
+    width: 100vh;
+    height: 100vh;
+    right: -40vh;
+    bottom: -40vh;
+    position: fixed;
+    background-color: #f6f1e5;
+    opacity: 0.8;
+    border-radius: 50%;
+    z-index: -1;
 }
 
 
