--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,15 @@ h3 {
     border-bottom: 3px solid #8fc9bc;
 }
 
+
+.singleoverskrift2 {
+    display: none;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 3px solid #8fc9bc;
+}
+
 .hours {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -154,6 +163,7 @@ footer img {
     transition: 0.3s ease all;
 }
 
+
 footer img:hover {
     opacity: 0.7;
 }
@@ -228,6 +238,11 @@ form {
     opacity: 0.8;
     border-radius: 50%;
     z-index: -1;
+}
+
+.margin img {
+    margin-top: 50px;
+    padding-top: 50px;
 }
 
 
