--- a/css/style.css
+++ b/css/style.css
@@ -240,9 +240,8 @@ form {
     z-index: -1;
 }
 
-.margin img {
-    margin-top: 50px;
-    padding-top: 50px;
+.plads {
+    margin-top: 20px;
 }
 
 
